checkUnificationsIslands reimplemented